Fixed Code Scrolling on Mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -293,7 +293,7 @@ pre {
 	border-radius: 5px;
 	background-color: #ddd;
 	padding: 5px 10px;
-	overflow: scroll;
+	overflow: auto;
 }
 
 #overlay {
